--- a/templates/dashboard/mission/invoice.html.twig
+++ b/templates/dashboard/mission/invoice.html.twig
@@ -2,90 +2,99 @@
 
 {% block content %}
 
-<section>
-	<div class="flex items-center justify-between p-4 antialiased">
-		<div class="flex flex-col space-y-2 w-1/2">
-			<h2 class="text-3xl font-semibold">{{ mission.name }}</h2>
-		</div>
-		<div class="space-x-2">
-			<a href="{{ path('dashboard_mission_index') }}" class="relative rounded px-5 py-2.5 bg-gray-100">
-				Retour</a>
-			<a href="{{ path('app_zip_generator', {'id': mission.id}) }}"
-				class="relative rounded px-5 py-2.5 bg-gray-100">
-				Télécharger</a>
-			<a href="{{ path('dashboard_mission_invoice_new', {'id': mission.id}) }}"
-				class="relative rounded px-5 py-2.5 bg-green-500 text-white">
-				Ajouter
-			</a>
-		</div>
+<div class="flex items-center justify-between p-4 antialiased">
+	<div class="flex flex-col space-y-2 w-1/2">
+		<h2 class="text-3xl font-semibold">{{ mission.name }}</h2>
 	</div>
-	<div class="mt-6 hidden md:flex md:flex-col">
-		<div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
-			<div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
-				<table class="min-w-full divide-y divide-gray-300">
-					<thead class="bg-gray-50">
-						<tr>
-							{% set columns = ['Numéro de facture', 'Fichier', 'Temps restants', 'Payé ?'] %}
-							{% for displayedName in columns %}
-							<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
-								{{ displayedName }}
-							</th>
-							{% endfor %}
-							<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
-								Créer le
-							</th>
-							<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
-								Actions
-							</th>
-						</tr>
-					</thead>
+	<div class="space-x-2">
+		<a href="{{ path('dashboard_mission_index') }}" class="relative rounded px-5 py-2.5 bg-gray-100">
+			Retour</a>
+		<a href="{{ path('app_zip_generator', {'id': mission.id}) }}"
+			class="relative rounded px-5 py-2.5 bg-gray-100">
+			Télécharger</a>
+		<a href="{{ path('dashboard_mission_invoice_new', {'id': mission.id}) }}"
+			class="relative rounded px-5 py-2.5 bg-green-500 text-white">
+			Ajouter
+		</a>
+	</div>
+</div>
 
-					<tbody class="divide-y divide-gray-200 bg-white">
-						{% for invoice in invoices %}
-						<tr>
-							<td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">{{ invoice.billNum
-								}}</td>
-							<td class="whitespace-nowrap px-6 py-4 text-gray-500 underline">
-								<a
-									href="{{ path('dashboard_mission_invoice_show_invoice', {'id': mission.id, 'invoiceId': invoice.id, 'name': invoice.realFilename}) }}">{{
-									invoice.realFilename }}</a>
-							</td>
-							{% if invoice.deadline %}
+<div class="mt-6 hidden md:flex md:flex-col">
+	<div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
+		<div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
+			<table class="min-w-full divide-y divide-gray-300">
+				<thead class="bg-gray-50">
+				<tr>
+					{% set columns = {
+						'Id': 'i.id',
+						'Numéro de facture': 'i.billNum',
+						'Fichier': 'i.realFilename',
+						'Temps restants': 'i.deadline',
+						'Payé': 'i.paid',
+						'Créer le': 'i.createdAt'
+					} %}
+					{% for displayedName, realName in columns %}
+						<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
+							{{ knp_pagination_sortable(invoices, displayedName, realName) }}
+						</th>
+					{% endfor %}
+					<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
+						Actions
+					</th>
+				</tr>
+				</thead>
+
+				<tbody class="divide-y divide-gray-200 bg-white">
+					{% for invoice in invoices %}
+					<tr>
+						<td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
+							{{ invoice.id }}
+						</td>
+						<td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
+							{{ invoice.billNum }}
+						</td>
+						<td class="whitespace-nowrap px-6 py-4 text-gray-500 underline">
+							<a href="{{ path('dashboard_mission_invoice_show_invoice', {'id': mission.id, 'invoiceId': invoice.id, 'name': invoice.realFilename}) }}">{{ invoice.realFilename }}</a>
+						</td>
+						{% if invoice.deadline %}
 							{% if not invoice.paid %}
-							{% set remainingDays = (invoice.deadline | date('U') - 'now' | date('U')) / (60 * 60 * 24)
-							%}
-							{% if remainingDays > 0 %}
-							<td class="whitespace-nowrap px-6 py-4 text-gray-500">Temps restant :
-								{{ remainingDays | round(0, 'floor') }}
-								jour{{ remainingDays > 1 ? 's' : '' }}</td>
+								{% set remainingDays = (invoice.deadline | date('U') - 'now' | date('U')) / (60 * 60 * 24) %}
+								{% if remainingDays > 0 %}
+									<td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
+										Temps restant : {{ remainingDays | round(0, 'floor') + 1 }} jour{{ remainingDays > 1 ? 's' : '' }}
+									</td>
+								{% else %}
+									{% set daysLate = ('now' | date('U') - invoice.deadline | date('U')) / (60 * 60 * 24) %}
+									<td class="whitespace-nowrap px-6 py-4 text-red-500 bg-gray-200">
+										Retard de {{ daysLate | round(0, 'floor') + 1 }} jour{{ daysLate > 1 ? 's' : '' }}
+									</td>
+								{% endif %}
 							{% else %}
-							{% set daysLate = ('now' | date('U') - invoice.deadline | date('U')) / (60 * 60 * 24) %}
-							<td class="whitespace-nowrap px-6 py-4 text-red-500">Retard de
-								{{ daysLate | round(0, 'floor') }}
-								jour{{ daysLate > 1 ? 's' : '' }}</td>
+								<td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">A jour</td>
 							{% endif %}
+						{% else %}
+							<td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">Date limite non définie</td>
+						{% endif %}
+						<td class="whitespace-nowrap px-6 py-4 text-gray-500">
+							{% if invoice.paid == 'yes' %}
+								<span class="text-green-600">Oui</span>
 							{% else %}
-							<td class="whitespace-nowrap px-6 py-4 text-gray-500">A jour</td>
+								<span>Non</span>
 							{% endif %}
-							{% else %}
-							<td class="whitespace-nowrap px-6 py-4 text-gray-500">Date limite non définie</td>
-							{% endif %}
-							<td class="whitespace-nowrap px-6 py-4 text-gray-500">{{ invoice.paid is defined and
-								invoice.paid ? 'Oui' : 'Non' }}</td>
-							<td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
-								{{ invoice.createdAt|date('Y-m-d') }}
-							</td>
-							<td class="whitespace-nowrap px-6 py-4 text-gray-500">
-								<a href="{{ path('dashboard_mission_invoice_edit', { id: invoice.id }) }}">Modifier</a>
-								<a href="{{ path('dashboard_mission_invoice_show', {'id': mission.id, 'invoiceId': invoice.id}) }}">Show</a>
-							</td>
-						</tr>
-						{% endfor %}
-					</tbody>
-				</table>
-			</div>
+						</td>
+						<td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
+							{{ invoice.createdAt|date('Y-m-d') }}
+						</td>
+						<td class="whitespace-nowrap px-6 py-4 text-gray-500">
+							<a href="{{ path('dashboard_mission_invoice_edit', { id: invoice.id }) }}">Modifier</a>
+							<a href="{{ path('dashboard_mission_invoice_show', {'id': mission.id, 'invoiceId': invoice.id}) }}">Show</a>
+						</td>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
 		</div>
 	</div>
-</section>
+</div>
 
 {% endblock %}
