--- a/templates/dashboard/mission/invoice_new.html.twig
+++ b/templates/dashboard/mission/invoice_new.html.twig
@@ -1,12 +1,28 @@
 {% extends 'dashboard_layout.html.twig' %}
 
 {% block content %}
-    <h1>Creation d'une facture</h1>
+    <h2 class="text-xl font-semibold leading-7 text-gray-900 mb-4">Creation d'une facture</h2>
 
     {{ form_start(invoiceForm) }}
     {{ form_widget(invoiceForm) }}
-    <button type="submit" class="btn btn-primary">Créer</button>
+    <div class="flex justify-end mt-6">
+        <div class="space-x-3 flex">
+            <a href="{{ path('dashboard_mission_invoice', { id: mission.id }) }}">
+                <div
+                        class="relative rounded px-5 py-2.5 overflow-hidden group bg-slate-500 relative hover:bg-gradient-to-r hover:from-slate-500 hover:to-slate-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-slate-400 transition-all ease-out duration-300">
+                <span
+                        class="absolute right-0 w-8 h-32 -mt-12 transition-all duration-1000 transform translate-x-12 bg-white opacity-10 rotate-12 group-hover:-translate-x-40 ease"></span>
+                    <span class="relative">Annuler</span>
+                </div>
+            </a>
+            <button type="submit"
+                    class="relative rounded px-5 py-2.5 overflow-hidden group bg-green-500 relative hover:bg-gradient-to-r hover:from-green-500 hover:to-green-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-green-400 transition-all ease-out duration-300">
+            <span
+                    class="absolute right-0 w-8 h-32 -mt-12 transition-all duration-1000 transform translate-x-12 bg-white opacity-10 rotate-12 group-hover:-translate-x-40 ease"></span>
+                <span class="relative">Créer</span>
+            </button>
+        </div>
+    </div>
     {{ form_end(invoiceForm) }}
-    <a href="{{ path('dashboard_mission_invoice', {'id': mission.id}) }}">annuler</a>
 {% endblock %}
 
