--- a/templates/dashboard/mission/invoice.html.twig
+++ b/templates/dashboard/mission/invoice.html.twig
@@ -94,6 +94,8 @@
 				</tbody>
 			</table>
 		</div>
+		{{ knp_pagination_render(invoices, 'dashboard/components/tailwind_pagination.html.twig',
+			{'slidingPagination': false}) }}
 	</div>
 </div>
 
