--- a/templates/dashboard/supplier/index.html.twig
+++ b/templates/dashboard/supplier/index.html.twig
@@ -20,7 +20,7 @@
 								'Nom': 's.name',
 								'Description': 's.description',
 								'Mission': 's.name',
-								'supplier': 'c.name',
+								'Fournisseur': 'c.name',
 								'Créer le': 's.createdAt'
 							} %}
 							{% for displayedName, realName in columns %}
