--- a/templates/dashboard/supplier/index.html.twig
+++ b/templates/dashboard/supplier/index.html.twig
@@ -6,7 +6,7 @@
 		{% include 'dashboard/components/navbar_component.html.twig' with {
     		'title': 'Fournisseur',
     		'text': 'Cette page vous permet de gérer les missions fournisseurs. Vous pouvez consulter, ajouter, modifier ou supprimer des missions fournisseurs selon vos besoins.',
-    		'button_text': 'Ajouter un fournisseur',
+    		'button_text': 'Ajouter une mission fournisseur',
     		'button_url': path('dashboard_supplier_new')
     } %}
 		<div class="mt-6 hidden md:flex md:flex-col">
