--- a/templates/dashboard/supplier/new.html.twig
+++ b/templates/dashboard/supplier/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h2 class="text-xl font-semibold leading-7 text-gray-900 mb-4">Creation d'une mission</h2>
+    <h2 class="text-xl font-semibold leading-7 text-gray-900 mb-4">Creation d'une mission fournisseur</h2>
 
     {{ form_start(supplierMissionForm) }}
     {{ form_widget(supplierMissionForm) }}
