--- a/templates/dashboard/supplier/invoice.html.twig
+++ b/templates/dashboard/supplier/invoice.html.twig
@@ -2,56 +2,111 @@
 
 {% block content %}
 
-    <h1>invoice de la supplierMission : {{ mission.name }}</h1>
+    <div class="flex items-center justify-between p-4 antialiased">
+        <div class="flex flex-col space-y-2 w-1/2">
+            <h2 class="text-3xl font-semibold">{{ supplierMission.name }}</h2>
+        </div>
+        <div class="space-x-2">
+            <a href="{{ path('dashboard_supplier_index') }}" class="relative rounded px-5 py-2.5 bg-gray-100">
+                Retour</a>
+            <a href=""
+               class="relative rounded px-5 py-2.5 bg-gray-100 cursor-not-allowed">
+                Télécharger</a>
+            <a href="{{ path('dashboard_supplier_invoice_new', {'id': supplierMission.id}) }}"
+               class="relative rounded px-5 py-2.5 bg-green-500 text-white">
+                Ajouter
+            </a>
+        </div>
+    </div>
 
-    <table>
-        <thead>
-        <tr>
-            <th>billNum</th>
-            <th>SupplierMission</th>
-            <th>InvoiceMission</th>
-            <th>file</th>
-            <th>deadline</th>
-            <th>paid</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for invoice in invoices %}
-            <tr>
-                <td>{{ invoice.billNum }}</td>
-                <td>{{ invoice.supplierMission.name ?? '' }}</td>
-                <td><a href="{{ path('dashboard_mission_invoice', {'id': invoice.supplierMission.mission.id}) }}">{{ invoice.invoiceMission.billNum ?? '' }}</a></td>
-                <td>
-                    <a href="{{ path('dashboard_supplier_invoice_show', {'id': mission.id, 'invoiceId': invoice.id}) }}">{{ invoice.realFilename }}</a>
-                </td>
-                {% if invoice.deadline %}
-                    {% if not invoice.paid %}
-                        {% set remainingDays = (invoice.deadline | date('U') - 'now' | date('U')) / (60 * 60 * 24) %}
-                        {% if remainingDays > 0 %}
-                            <td>Temps restant : {{ remainingDays | round(0, 'floor') }}
-                                jour{{ remainingDays > 1 ? 's' : '' }}</td>
-                        {% else %}
-                            {% set daysLate = ('now' | date('U') - invoice.deadline | date('U')) / (60 * 60 * 24) %}
-                            <td class="text-red-500">Retard de {{ daysLate | round(0, 'floor') }}
-                                jour{{ daysLate > 1 ? 's' : '' }}</td>
-                        {% endif %}
-                    {% else %}
-                        <td>A jour</td>
-                    {% endif %}
-                {% else %}
-                    <td>Date limite non définie</td>
-                {% endif %}
-                <td>{{ invoice.paid is defined and invoice.paid ? 'Payé' : 'Non payé' }}</td>
-                <td><a href="{{ path('dashboard_supplier_invoice_edit', { id: invoice.id }) }}">Modifier</a></td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="4">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    <a href="{{ path('dashboard_supplier_invoice_new', {'id': mission.id}) }}">Create new invoice</a>
-    <a href="{{ path('dashboard_supplier_index') }}">Retour a la liste des missions</a>
+    <div class="mt-6 hidden md:flex md:flex-col">
+        <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
+            <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
+                <table class="min-w-full divide-y divide-gray-300">
+                    <thead class="bg-gray-50">
+                    <tr>
+                        {% set columns = {
+                            'Id': 's.id',
+                            'Numéro de facture': 's.billNum',
+                            'Facture mission': 'i.invoiceMission',
+                            'Fichier': 's.realFilename',
+                            'Temps restants': 's.deadline',
+                            'Payé': 's.paid',
+                            'Créer le': 's.createdAt'
+                        } %}
+                        {% for displayedName, realName in columns %}
+                            <th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
+                                {{ knp_pagination_sortable(invoices, displayedName, realName) }}
+                            </th>
+                        {% endfor %}
+                        <th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
+                            Actions
+                        </th>
+                    </tr>
+                    </thead>
+
+                    <tbody class="divide-y divide-gray-200 bg-white">
+                    {% for invoice in invoices %}
+                        <tr>
+                            <td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
+                                {{ invoice.id }}
+                            </td>
+                            <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
+                                {{ invoice.billNum }}
+                            </td>
+                            <td class="whitespace-nowrap px-6 py-4 text-gray-500">
+                                {% if invoice.invoiceMission.billNum ?? '' != null %}
+                                    <a href="{{ path('dashboard_mission_invoice_show', {'id': invoice.invoiceMission.mission.id, 'invoiceId': invoice.invoiceMission.id}) }}" class="underline">{{ invoice.invoiceMission.billNum }}</a>
+                                    {% else %}
+
+                                {% endif %}
+                            </td>
+                            <td class="whitespace-nowrap px-6 py-4 text-gray-500 underline bg-gray-200">
+                                <a href="{{ path('dashboard_supplier_invoice_show_invoice', {'id': supplierMission.id, 'invoiceId': invoice.id, 'name': invoice.realFilename}) }}">{{ invoice.realFilename }}</a>
+                            </td>
+                            {% if invoice.deadline %}
+                                {% if not invoice.paid %}
+                                    {% set remainingDays = (invoice.deadline | date('U') - 'now' | date('U')) / (60 * 60 * 24) %}
+                                    {% if remainingDays > 0 %}
+                                        <td class="whitespace-nowrap px-6 py-4 text-gray-500">
+                                            Temps restant : {{ remainingDays | round(0, 'floor') + 1 }} jour{{ remainingDays > 1 ? 's' : '' }}
+                                        </td>
+                                    {% else %}
+                                        {% set daysLate = ('now' | date('U') - invoice.deadline | date('U')) / (60 * 60 * 24) %}
+                                        <td class="whitespace-nowrap px-6 py-4 text-red-500">
+                                            Retard de {{ daysLate | round(0, 'floor') + 1 }} jour{{ daysLate > 1 ? 's' : '' }}
+                                        </td>
+                                    {% endif %}
+                                {% else %}
+                                    <td class="whitespace-nowrap px-6 py-4 text-gray-500">A jour</td>
+                                {% endif %}
+                            {% else %}
+                                <td class="whitespace-nowrap px-6 py-4 text-gray-500">Date limite non définie</td>
+                            {% endif %}
+                            <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
+                                {% if invoice.paid == 'yes' %}
+                                    <span class="text-green-600">Oui</span>
+                                {% else %}
+                                    <span>Non</span>
+                                {% endif %}
+                            </td>
+                            <td class="whitespace-nowrap px-6 py-4 text-gray-500">
+                                {{ invoice.createdAt|date('Y-m-d') }}
+                            </td>
+                            <td class="whitespace-nowrap px-6 py-4 text-gray-500">
+                                <div class="space-x-1 opacity-80">
+                                    <a href="{{ path('dashboard_supplier_invoice_show', {'id': supplierMission.id, 'invoiceId': invoice.id}) }}">Détails</a>
+                                    <a href="{{ path('dashboard_supplier_invoice_edit', { id: invoice.id }) }}">Modifier</a>
+                                </div>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            {{ knp_pagination_render(invoices, 'dashboard/components/tailwind_pagination.html.twig',
+                {'slidingPagination': false}) }}
+        </div>
+    </div>
 
 {% endblock %}
