--- a/templates/dashboard/mission/invoice.html.twig
+++ b/templates/dashboard/mission/invoice.html.twig
@@ -54,7 +54,7 @@
 							{{ invoice.billNum }}
 						</td>
 						<td class="whitespace-nowrap px-6 py-4 text-gray-500 underline">
-							<a href="{{ path('dashboard_mission_invoice_show_invoice', {'id': mission.id, 'invoiceId': invoice.id, 'name': invoice.realFilename}) }}">{{ invoice.realFilename }}</a>
+							<a href="{{ path('dashboard_mission_invoice_show_invoice', {'id': mission.id, 'invoiceId': invoice.id, 'name': invoice.realFilename}) }}" target="_blank">{{ invoice.realFilename }}</a>
 						</td>
 						{% if invoice.deadline %}
 							{% if not invoice.paid %}
