--- a/templates/dashboard/supplier/invoice.html.twig
+++ b/templates/dashboard/supplier/invoice.html.twig
@@ -62,7 +62,7 @@
                                 {% endif %}
                             </td>
                             <td class="whitespace-nowrap px-6 py-4 text-gray-500 underline bg-gray-200">
-                                <a href="{{ path('dashboard_supplier_invoice_show_invoice', {'id': supplierMission.id, 'invoiceId': invoice.id, 'name': invoice.realFilename}) }}">{{ invoice.realFilename }}</a>
+                                <a href="{{ path('dashboard_supplier_invoice_show_invoice', {'id': supplierMission.id, 'invoiceId': invoice.id, 'name': invoice.realFilename}) }}" target="_blank">{{ invoice.realFilename }}</a>
                             </td>
                             {% if invoice.deadline %}
                                 {% if not invoice.paid %}
