--- a/templates/dashboard/supplier/invoice_edit.html.twig
+++ b/templates/dashboard/supplier/invoice_edit.html.twig
@@ -1,20 +1,33 @@
 {% extends 'dashboard_layout.html.twig' %}
 
 {% block content %}
-    <h1>Modification d'une facture</h1>
+    <h1>Modification de la facture n°<span>{{ invoice.billNum }}</span></h1>
 
     {{ form_start(invoiceForm) }}
     {{ form_widget(invoiceForm) }}
 
-    {# Afficher le lien vers l'image existante #}
-    {% if imagePath %}
-        <p>Image existante :</p>
-        <img src="{{ imagePath }}" alt="Image existante">
-    {% endif %}
+    <div class="flex justify-end mt-6">
+        <div class="space-x-3 flex">
+            <a href="{{ path('dashboard_supplier_invoice', {'id': mission.id}) }}">
+                <div
+                        class="relative rounded px-5 py-2.5 overflow-hidden group bg-slate-500 relative hover:bg-gradient-to-r hover:from-slate-500 hover:to-slate-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-slate-400 transition-all ease-out duration-300">
+                <span
+                        class="absolute right-0 w-8 h-32 -mt-12 transition-all duration-1000 transform translate-x-12 bg-white opacity-10 rotate-12 group-hover:-translate-x-40 ease"></span>
+                    <span class="relative">Retour</span>
+                </div>
+            </a>
+            <button type="submit"
+                    class="relative rounded px-5 py-2.5 overflow-hidden group bg-green-500 relative hover:bg-gradient-to-r hover:from-green-500 hover:to-green-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-green-400 transition-all ease-out duration-300">
+            <span
+                    class="absolute right-0 w-8 h-32 -mt-12 transition-all duration-1000 transform translate-x-12 bg-white opacity-10 rotate-12 group-hover:-translate-x-40 ease"></span>
+                <span class="relative">Modifier</span>
+            </button>
+        </div>
+    </div>
 
-    <button type="submit" class="btn btn-primary">Modifier</button>
+    <p>PDF actuelle :</p>
+    <a href="{{ path('dashboard_supplier_invoice_show_invoice', {'id': mission.id, 'invoiceId': invoice.id, 'name': invoice.realFilename}) }}" target="_blank">Ouvrir le pdf</a>
+    <embed src="{{ path('dashboard_supplier_invoice_show_invoice', {'id': mission.id, 'invoiceId': invoice.id, 'name': invoice.realFilename})}}" width="300" height="300" type='application/pdf'>
     {{ form_end(invoiceForm) }}
-
-    <a href="{{ path('dashboard_supplier_invoice', {'id': mission.id}) }}">Annuler</a>
 {% endblock %}
 
