--- a/templates/dashboard/mission/invoice_show.html.twig
+++ b/templates/dashboard/mission/invoice_show.html.twig
@@ -7,6 +7,7 @@
     <div class="p-10 space-y-3">
         <p>Id : {{ invoice.id }}</p>
         <p>Numéro de facture : {{ invoice.billNum }}</p>
+        <p>Libellé : {{ invoice.word }}</p>
         <p>Nom de la facture : {{ invoice.realFilename }}</p>
         <p>Nom de la mission: {{ invoice.mission.name }}</p>
         <p>Date d'expiration : {{ invoice.deadline|date('d/m/Y') }}</p>
