suppr libellé + add type mission facture

--- a/templates/dashboard/mission/invoice.html.twig
+++ b/templates/dashboard/mission/invoice.html.twig
@@ -28,7 +28,7 @@
 					{% set columns = {
 						'Id': 'i.id',
 						'Numéro de facture': 'i.billNum',
-						'Libellé': 'i.word',
+						'Type': 'i.type',
 						'Fichier': 'i.realFilename',
 						'Temps restants': 'i.deadline',
 						'Payé': 'i.paid',
@@ -55,7 +55,7 @@
 							{{ invoice.billNum }}
 						</td>
 						<td class="whitespace-nowrap px-6 py-4 text-gray-500">
-							{{ invoice.word ?? '' }}
+							{{ invoice.type }}
 						</td>
 						<td class="whitespace-nowrap px-6 py-4 text-gray-500 underline">
 							<a href="{{ path('dashboard_mission_invoice_show_invoice', {'id': mission.id, 'invoiceId': invoice.id, 'name': invoice.realFilename}) }}" target="_blank">{{ invoice.realFilename }}</a>
