--- a/templates/dashboard_layout.html.twig
+++ b/templates/dashboard_layout.html.twig
@@ -32,24 +32,9 @@
     const sidebar = document.querySelector("aside");
     const maxSidebar = document.querySelector(".max")
     const miniSidebar = document.querySelector(".mini")
-    const roundout = document.querySelector(".roundout")
     const maxToolbar = document.querySelector(".max-toolbar")
     const logo = document.querySelector('.logo')
     const content = document.querySelector('.content')
-    const moon = document.querySelector(".moon")
-    const sun = document.querySelector(".sun")
-
-    function setDark(val){
-      if(val === "dark"){
-        document.documentElement.classList.add('dark')
-        moon.classList.add("hidden")
-        sun.classList.remove("hidden")
-      }else{
-        document.documentElement.classList.remove('dark')
-        sun.classList.add("hidden")
-        moon.classList.remove("hidden")
-      }
-    }
 
     function openNav() {
       if(sidebar.classList.contains('-translate-x-48')){
@@ -78,10 +63,13 @@
         logo.classList.add('ml-12')
         content.classList.remove("ml-12","md:ml-60")
         content.classList.add("ml-12")
-
       }
-
     }
+  </script>
+
+  <script>
+    {% block javascript %}
+    {% endblock %}
   </script>
 </body>
 </html>
