--- a/templates/dashboard/mission/invoice_show.html.twig
+++ b/templates/dashboard/mission/invoice_show.html.twig
@@ -39,6 +39,7 @@
                     <span class="relative">Retour</span>
                 </div>
             </a>
+            {{ include('dashboard/mission/_delete_invoice_form.html.twig') }}
             <a href="{{ path('dashboard_mission_invoice_edit', {id: mission.id}) }}">
                 <div
                         class="relative rounded px-5 py-2.5 overflow-hidden group bg-green-500 relative hover:bg-gradient-to-r hover:from-green-500 hover:to-green-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-green-400 transition-all ease-out duration-300">
