--- a/templates/dashboard_layout.html.twig
+++ b/templates/dashboard_layout.html.twig
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="https://msconsulting-europe.com/wp-content/uploads/2024/05/cropped-logo-square.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="{{ asset('./styles/css/home.css')}}" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
