--- a/templates/dashboard/supplier/invoice.html.twig
+++ b/templates/dashboard/supplier/invoice.html.twig
@@ -106,8 +106,7 @@
                     </tbody>
                 </table>
             </div>
-            {{ knp_pagination_render(invoices, 'dashboard/components/tailwind_pagination.html.twig',
-                {'slidingPagination': false}) }}
+            {{ knp_pagination_render(invoices) }}
         </div>
     </div>
 
