--- a/templates/dashboard/address/index.html.twig
+++ b/templates/dashboard/address/index.html.twig
@@ -12,7 +12,7 @@
 	} %}
 	<div class="mt-6 flex md:flex-col">
 		<div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
-			<div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
+			<div class="overflow-x-auto shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
 				<table class="min-w-full divide-y divide-gray-300">
 					<thead class="bg-gray-50">
 						<tr>
@@ -25,18 +25,18 @@
 							'Entreprise': 'c.name'
 							} %}
 							{% for displayedName, realName in columns %}
-							<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
+							<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900 whitespace-nowrap text-sm md:text-base">
 								{{ knp_pagination_sortable(address, displayedName, realName) }}
 							</th>
 							{% endfor %}
-							<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
+							<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900 text-sm md:text-base">
 								Actions
 							</th>
 						</tr>
 					</thead>
 					<tbody class="divide-y divide-gray-200 bg-white">
 						{% for data in address %}
-						<tr class="">
+						<tr class="text-sm md:text-base">
 							<td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
 								<a href="{{ path('dashboard_address_show', {'id': data.id}) }}">{{ data.id }}</a>
 							</td>
@@ -71,8 +71,7 @@
 
 				</table>
 			</div>
-			{{ knp_pagination_render(address, 'dashboard/components/tailwind_pagination.html.twig',
-			{'slidingPagination': false}) }}
+			{{ knp_pagination_render(address) }}
 		</div>
 	</div>
 </section>
