--- a/templates/dashboard/company/index.html.twig
+++ b/templates/dashboard/company/index.html.twig
@@ -74,8 +74,7 @@
                         </tbody>
                     </table>
                 </div>
-                {{ knp_pagination_render(companies, 'dashboard/components/tailwind_pagination.html.twig',
-                    {'slidingPagination': false}) }}
+                {{ knp_pagination_render(companies) }}
             </div>
         </div>
     </section>
