--- a/templates/dashboard/mission/index.html.twig
+++ b/templates/dashboard/mission/index.html.twig
@@ -94,8 +94,7 @@
 						</tbody>
 					</table>
 				</div>
-				{{ knp_pagination_render(missions, 'dashboard/components/tailwind_pagination.html.twig',
-					{'slidingPagination': false}) }}
+				{{ knp_pagination_render(missions) }}
 			</div>
 		</div>
 	</section>
