--- a/templates/dashboard/person/index.html.twig
+++ b/templates/dashboard/person/index.html.twig
@@ -77,7 +77,7 @@
 						</tbody>
 					</table>
 				</div>
-				{{ knp_pagination_render(persons, 'dashboard/components/tailwind_pagination.html.twig', {'slidingPagination': false}) }}
+				{{ knp_pagination_render(persons) }}
 			</div>
 		</div>
 	</section>
