--- a/templates/dashboard/supplier/index.html.twig
+++ b/templates/dashboard/supplier/index.html.twig
@@ -72,8 +72,7 @@
 						</tbody>
 					</table>
 				</div>
-				{{ knp_pagination_render(supplierMissions, 'dashboard/components/tailwind_pagination.html.twig',
-					{'slidingPagination': false}) }}
+				{{ knp_pagination_render(supplierMissions) }}
 			</div>
 		</div>
 	</section>
