--- a/templates/dashboard/user/index.html.twig
+++ b/templates/dashboard/user/index.html.twig
@@ -74,8 +74,7 @@
 					</tbody>
 				</table>
 			</div>
-			{{ knp_pagination_render(users, 'dashboard/components/tailwind_pagination.html.twig', {'slidingPagination':
-			false}) }}
+			{{ knp_pagination_render(users) }}
 		</div>
 	</div>
 	</div>
