--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -7,10 +7,8 @@
             </div>
         </div>
     </div>
-    <div onclick="openNav()" class = "-right-6 transition transform ease-in-out duration-500 flex border-4 border-white bg-[#1E293B] hover:bg-green-600 absolute top-2 p-3 rounded-full text-white hover:rotate-45">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={3} stroke="currentColor" class="w-4 h-4">
-            <path strokeLinecap="round" strokeLinejoin="round" d="M3.75 6A2.25 2.25 0 016 3.75h2.25A2.25 2.25 0 0110.5 6v2.25a2.25 2.25 0 01-2.25 2.25H6a2.25 2.25 0 01-2.25-2.25V6zM3.75 15.75A2.25 2.25 0 016 13.5h2.25a2.25 2.25 0 012.25 2.25V18a2.25 2.25 0 01-2.25 2.25H6A2.25 2.25 0 013.75 18v-2.25zM13.5 6a2.25 2.25 0 012.25-2.25H18A2.25 2.25 0 0120.25 6v2.25A2.25 2.25 0 0118 10.5h-2.25a2.25 2.25 0 01-2.25-2.25V6zM13.5 15.75a2.25 2.25 0 012.25-2.25H18a2.25 2.25 0 012.25 2.25V18A2.25 2.25 0 0118 20.25h-2.25A2.25 2.25 0 0113.5 18v-2.25z" />
-        </svg>
+    <div onclick="openNav()" class = "arrow -right-6 transition transform ease-in-out duration-500 flex border-4 border-white bg-[#1E293B] hover:bg-green-600 absolute top-2 p-3 rounded-full text-white hover:rotate-180 text-white">
+        <i class="fa-solid fa-arrow-right"></i>
     </div>
     <!-- MAX SIDEBAR-->
     <div class= "max hidden text-white mt-20 flex-col space-y-2 w-full h-[calc(100vh)]">
